Allow QC deletion & permit multiple QCs per file (#20)
* GR-532 Save many QCs per SWID & allow QC deletion
